--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
   "require": {
     "php": ">=7.0",
     "laravel/framework": ">=5.2.0",
-    "guzzlehttp/guzzle": "~6.0",
+    "guzzlehttp/guzzle": ">=6.0",
     "tymon/jwt-auth": "0.5.* || 1.0.*",
     "minime/annotations": "2.3.1",
     "maatwebsite/excel": "3.*",
